# bismuto

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install_linux.sh  install_windows.bat  version.h.in
cmake/: linux.cmake  windows.cmake
cmake/toolchains/: windows.cmake
problemsData/: dados_exemplo.csv
resources/: CMakeLists.txt
resources/examples/book_c3_s1_sc5/: model.glpk
src/: CMakeLists.txt  main.cpp
src/constants/: constants.hpp
src/example/: CMakeLists.txt  example.cpp  example.hpp
src/example/example_constants/: CMakeLists.txt  example_constants.hpp
src/examples/: CMakeLists.txt  book_c1_s3_sc1.cpp  examples.cpp  examples.hpp
src/examples/book_c1_s3_sc1/: CMakeLists.txt  book_c1_s3_sc1.cpp
src/examples/book_c3_s1_sc5/: CMakeLists.txt  book_c3_s1_sc5.cpp
src/examples/livestock_diet/: CMakeLists.txt  livestock_diet.cpp  model.ods
src/examples/neighbourhood_planning/: CMakeLists.txt  model.ods  neighbourhood_planning.cpp
src/examples/read_csv/: CMakeLists.txt  read_csv.cpp
src/model/: CMakeLists.txt  data_type.hpp  definitions.hpp  getters.cpp  model.cpp  model.hpp  reading.cpp  setters.cpp  solving.cpp
src/model/constraint/: CMakeLists.txt  constraint.hpp
src/model/objective/: CMakeLists.txt  objective.hpp
src/model/value/: CMakeLists.txt  value.hpp
src/model/variable/: CMakeLists.txt  variable.hpp
src/public/: CMakeLists.txt  canonical.ods
src/util/: CMakeLists.txt  util.cpp  util.hpp
